# forum-happ

./: Cargo.toml  EXERCISES.md  README.md  flake.nix  package-lock.json  package.json
.github/workflows/: test.yml
dna/workdir/: dna.yaml
dna/zomes/comments/: Cargo.toml
dna/zomes/comments/src/: lib.rs
dna/zomes/comments/src/comment/: entry.rs  handlers.rs
dna/zomes/posts/: Cargo.toml
dna/zomes/posts/src/: lib.rs
dna/zomes/profiles/: Cargo.toml
dna/zomes/profiles/src/: lib.rs
nix/: sources.json
scripts/: unimplement-comments.mjs  unimplement-profiles.mjs
tests/: package.json
tests/src/: comment.ts  index.ts  post.ts  profile.ts  utils.ts
tests/src/forum/comments/: comment.ts
tests/src/forum/posts/: post.ts
tests/src/forum/profiles/: profile.ts
ui/: index.html  package.json  tsconfig.json
ui/src/: contexts.ts  holochain-app.ts  utils.ts
ui/src/components/forum/comments/: comment-detail.ts  comments-on-post.ts  create-comment.ts
ui/src/components/forum/posts/: all-channels.ts  all-posts.ts  channel-posts.ts  create-post.ts  edit-post.ts  post-detail.ts
ui/src/components/forum/profiles/: agent-nickname.ts  create-profile.ts
ui/src/types/: helpers.ts
ui/src/types/forum/: comments.ts  posts.ts  profiles.ts
workdir/: dna.yaml  happ.yaml
zomes/comments/: Cargo.toml
zomes/comments/src/: lib.rs
zomes/posts/: Cargo.toml
zomes/posts/src/: lib.rs
zomes/profiles/: Cargo.toml
zomes/profiles/src/: lib.rs
