[package]
edition = "2021"
name = "comments_zome"
version = "0.0.1"

[lib]
crate-type = ["cdylib", "rlib"]
name = "comments_zome"

[dependencies]
derive_more = "0"
serde = "1"

hdk = {version = "0.0.140"}

[features]
exercisestep = []

exercise2step1 = []
exercise2step2 = ["exercise2step1"]
exercise2step3 = ["exercise2step2"]
exercise2step4 = ["exercise2step3"]

exercise3step1 = ["exercise2step4"]
exercise3step2 = ["exercise2step4"]
exercise3step3 = ["exercise2step4"]
exercise3step4 = ["exercise2step4"]
exercise3step5 = ["exercise2step4"]
exercise3step6 = ["exercise2step4"]
exercise3step7 = ["exercise2step4"]
exercise3step8 = ["exercise2step4"]
exercise3step9 = ["exercise2step4"]
