[package]
edition = "2021"
name = "posts_zome"
version = "0.0.1"

[lib]
crate-type = ["cdylib", "rlib"]
name = "posts_zome"

[dependencies]
serde = "1"
derive_more = "0"

hdk = {version="0.0.130", features = ["encoding"]}

[features]
exercisestep = []
exercise3step1 = []
exercise3step2 = ["exercise3step1"]
exercise3step3 = ["exercise3step2"]
exercise3step4 = ["exercise3step3"]
exercise3step5 = ["exercise3step4"]
exercise3step6 = ["exercise3step5"]
exercise3step7 = ["exercise3step6"]
exercise3step8 = ["exercise3step7"]
exercise3step9 = ["exercise3step8"]
