[package]
edition = "2021"
name = "posts"
version = "0.0.1"

[lib]
crate-type = ["cdylib", "rlib"]
name = "posts"

[dependencies]
derive_more = "0"
serde = "1"

hdk = { workspace = true }
posts_zome = { git = "https://github.com/holochain-immersive/zomes", package = "posts_zome", branch = "main" }

[features]
exercisestep = ["posts_zome/exercisestep"]

exercise3step1 = ["posts_zome/exercise3step1"]
exercise3step2 = ["exercise3step1", "posts_zome/exercise3step2"]
exercise3step3 = ["exercise3step2", "posts_zome/exercise3step3"]
exercise3step4 = ["exercise3step3", "posts_zome/exercise3step4"]
exercise3step5 = ["exercise3step4", "posts_zome/exercise3step5"]
exercise3step6 = ["exercise3step5", "posts_zome/exercise3step6"]
exercise3step7 = ["exercise3step6", "posts_zome/exercise3step7"]
exercise3step8 = ["exercise3step7", "posts_zome/exercise3step8"]
exercise3step9 = ["exercise3step8", "posts_zome/exercise3step9"]
